--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,69 @@
-#logoBar{
+#logoBar {
   width: 30vw;
-  height: 100vh;
 }
-#siteLogo{
+
+#siteLogo {
   width: 100%;
 }
+
 body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #7393B3;
+  background-color: darkolivegreen;
   display: flex;
 }
-#staffGallery{
+
+#staffGallery {
   width: 70vw;
-  display: inherit;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+  gap: 20px;
 
 }
-.galleryImage{
+
+.galleryImage {
   width: 100%;
   height: auto;
   height: 300px;
+}
+
+.card {
+  box-shadow: 5px 15px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  width: 230px;
+  height: 350px;
+  background-color: beige;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+
+  #logobar {
+    width: auto;
+    height: auto;
+  }
+
+  #staffGallery {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    height: auto;
+    order: 2;
+  }
 }
