--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: #7393B3;
+  color:orchid;
   background-color: darkolivegreen;
   display: flex;
 }
